<resources>
    <string name="app_name">胶膜PDA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PDA扫码</string>
    <string name="nav_header_subtitle">www.firstpvm.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">菜单</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home">菜单</string>
    <string name="入库">入库</string>
    <string name="成品入库">成品待入库</string>
    <string name="外购入库">外购入库</string>
    <string name="其他入库">其他入库</string>
    <string name="销售出库">拣货出库</string>
    <string name="材料出库">材料出库</string>
    <string name="其他出库">其他出库</string>
    <string name="拆托出库">领用出库</string>
    <string name="返工出库">返工(半成品)出库</string>
    <string name="出库">出库</string>
    <string name="库存">库存</string>
    <string name="库存盘点">库存盘点</string>
    <string name="生产">生产</string>
    <string name="组托单">组托单</string>
    <string name="装箱单">装箱单</string>

    <string name="发货订单">发货单号：</string>
    <string name="发货日期">发货日期：</string>
    <string name="行次">行次：</string>
    <string name="客户名称">客户名称：</string>
    <string name="仓库">仓库：</string>
    <string name="存货编码">存货编码：</string>
    <string name="存货名称">存货名称：</string>
    <string name="规格型号">规格型号：</string>
    <string name="产品要求码">产品要求码</string>
    <string name="发货数量">发货数量：</string>
    <string name="备注">备注：</string>


</resources>
